# riser

./: .cz.toml  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  mypy.ini  render.yaml
.claude/: settings.json
.claude/agents/: backend-design-agent.md  docs-sync-agent.md  frontend-design-agent.md  integration-agent.md  ui-ux-specialist-agent.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  task.md
.github/workflows/: backend-ci.yml  commitlint.yml  frontend-ci.yml  release.yml  slack-notify.yml
.knowledge-base/: INDEX.md
.knowledge-base/commitizen/: overview.md
.knowledge-base/django/: overview.md
.knowledge-base/drf/: overview.md
.knowledge-base/eslint/: overview.md
.knowledge-base/github-actions/: overview.md
.knowledge-base/mypy-and-ty/: overview.md
.knowledge-base/playwright/: overview.md
.knowledge-base/pre-commit/: overview.md
backend/: .env.example  README.md  pyproject.toml
backend/apps/: __init__.py
backend/apps/compliance/: __init__.py  admin.py  apps.py  dob.py  models.py  serializers.py  services.py  urls.py  views.py
backend/apps/compliance/migrations/: 0001_initial.py
backend/apps/compliance/tests/: conftest.py  test_api.py  test_dob.py  test_models.py  test_services.py
backend/config/: __init__.py  urls.py
backend/config/settings/: __init__.py  base.py  local.py  production.py
docs/: slack-notifications.md  tutor-convo.txt
frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
scripts/: check-claude-attribution.sh  check-env.sh  check-knowledge-friction.py  format-on-save.sh
(+48 files in other folders)
