[project]
name = "riser-backend"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.7",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.14.0",
    "djangorestframework>=3.17.1",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "python-dateutil>=2.9.0.post0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "django-stubs>=6.0.7",
    "djangorestframework-stubs>=3.17.0",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.22",
    "time-machine>=3.2.0",
    "ty>=0.0.61",
    "types-python-dateutil>=2.9.0.20260716",
]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "D", "UP", "B", "DJ"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["D"]
"**/tests/*.py" = ["D"]

[tool.mypy]
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
python_version = "3.14"
strict = true
exclude = ["migrations/"]

[[tool.mypy.overrides]]
module = ["environ.*"]
ignore_missing_imports = true

[tool.django-stubs]
django_settings_module = "config.settings.local"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
addopts = "--reuse-db"

[tool.coverage.run]
source = ["apps"]
omit = ["*/migrations/*", "*/tests/*", "manage.py"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[tool.ty.environment]
python-version = "3.14"

[tool.ty.src]
exclude = ["**/migrations/**"]
